[package]
name = "pog_boy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
bincode = "1.3.3"
byteorder = "1"
either = "1.8"
phf = { version = "0.11", features = ["macros"] }
piston_window = "*"
image = "0.24.5"
gfx = "0.18.2"
strum = "0.24.1"
strum_macros = "0.24.1"
